finialzing save the date and removing Home

--- a/django-wedding-website/guests/templates/guests/email_templates/save_the_date.html
+++ b/django-wedding-website/guests/templates/guests/email_templates/save_the_date.html
@@ -26,8 +26,9 @@
             <td style="padding: 20px 0 0 0; font-size: 16px; line-height: 20px; font-family: Helvetica, Arial, sans-serif; color: {{ font_color }};"
                 class="padding-copy"
                 align="center">
+                Save the date for the wedding of <br>
                 Connor &amp; Fiona<br>
-                LBJ Wildflower Center, Austin, Texas<br>
+                at the LBJ Wildflower Center in Austin, Texas<br>
                 Go to <a href="http://www.connorfiona.com">www.connorfiona.com</a> for updated info.<br>
             </td>
         </tr>
@@ -35,8 +36,8 @@
     </table>
 {% endblock %}
 {% block footer_content %}
-    Can't make it? Let us know at <a class="moz-txt-link-abbreviated" href="mailto:{{ rsvp_address }}">{{ rsvp_address }}</a>.
-    {% if email_mode %}
-        <p><a href="http://connorfiona.com">http://www.connorfiona.com</a></p>
-    {% endif %}
+{#    Can't make it? Let us know at <a class="moz-txt-link-abbreviated" href="mailto:{{ rsvp_address }}">{{ rsvp_address }}</a>.#}
+{#    {% if email_mode %}#}
+{#        <p><a href="http://connorfiona.com">http://www.connorfiona.com</a></p>#}
+{#    {% endif %}#}
 {% endblock %}
