--- a/django-wedding-website/bigday/templates/home.html
+++ b/django-wedding-website/bigday/templates/home.html
@@ -137,7 +137,7 @@
         <!--{% include 'partials/story.html' %}-->
     <!--</section>-->
     <!--{% include 'partials/proposal.html' %}-->
-{#    {% include 'partials/save-the-dates.html' %}#}
+    {% include 'partials/save-the-dates.html' %}
     <section id="contact" class="bg-dark">
         <div class="container">
             <div class="row">
