--- a/django-wedding-website/bigday/templates/partials/save-the-dates.html
+++ b/django-wedding-website/bigday/templates/partials/save-the-dates.html
@@ -3,20 +3,20 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="section-heading text-center">Save the Dates</h2>
-                <hr class="primary">
-                <p>
-                    We had a lot of fun with our save the dates.
-                    We made six different versions and randomly sent them out to friends and family.
-                    Click on any of the images below to see the full version.
-                </p>
-            </div>
+                <h2 class="section-heading text-center">Save the Date</h2>
+{#                <hr class="primary">#}
+{#                <p>#}
+{#                    We had a lot of fun with our save the dates.#}
+{#                    We made six different versions and randomly sent them out to friends and family.#}
+{#                    Click on any of the images below to see the full version.#}
+{#                </p>#}
+{#            </div>#}
         </div>
     </div>
     <div class="container-fluid">
         <div class="row no-gutter">
             {% for key, context in save_the_dates.items %}
-            <div class="col-lg-4 col-sm-6">
+{#            <div class="col-lg-4">#}
                 <a href="{% url 'save-the-date' key %}" target="_blank" class="portfolio-box page-scroll">
                     {% with "save-the-date/images/"|add:context.main_image as main_static_url %}
                     <img src="{% static main_static_url %}" class="img-responsive center-block img-circle" alt="{{ context.title }}">
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                 </a>
-            </div>
+{#            </div>#}
             {% endfor %}
         </div>
     </div>
