--- a/django-wedding-website/guests/templates/guests/email_templates/save_the_date.html
+++ b/django-wedding-website/guests/templates/guests/email_templates/save_the_date.html
@@ -1,11 +1,10 @@
 {% extends 'guests/email_templates/email_base.html' %}
 {% load staticfiles %}
 {% block main_image %}
-    <a href="http://coryandro.com/"
+    <a href="http://www.connorfiona.com/"
        {% if email_mode %}target="_blank"{% endif %}>
-    {% with "save-the-date/images/"|add:main_image as main_static_url %}
+    {% with "bigday/images/"|add:main_image as main_static_url %}
         <img src="{% if email_mode %}cid:{{ main_image }}{% else %}{% static main_static_url %}{% endif %}"
-             alt="cory and rowena"
              style="display: block; padding: 0; color: #666666; text-decoration: none; font-family: Helvetica, arial, sans-serif; font-size: 16px;"
              class="img-max" border="0"
              height="400" width="500">
