--- a/django-wedding-website/guests/templates/guests/email_templates/email_base.html
+++ b/django-wedding-website/guests/templates/guests/email_templates/email_base.html
@@ -176,7 +176,7 @@
                             <tbody>
                             <tr>
                                 <td align="center" bgcolor="#ffffff">
-                                    {% with "save-the-date/images/"|add:header_filename as header_filepath %}
+                                    {% with "bigday/images/"|add:header_filename as header_filepath %}
                                         <img src="{% if email_mode %}cid:{{ header_filename }}{% else %}{% static header_filepath %}{% endif %}"
                                              style="display: inline-block; align-content:center; font-size: 16px;"
                                              border="0"
