--- a/django-wedding-website/static/bigday/css/creative.css
+++ b/django-wedding-website/static/bigday/css/creative.css
@@ -193,7 +193,7 @@ header {
 }
 
 #main-header {
-    background-image: url('../images/jofun.JPG');
+    background-image: url('../images/engaement.png');
 }
 
 header .header-content {
