adding event info

--- a/django-wedding-website/bigday/templates/home.html
+++ b/django-wedding-website/bigday/templates/home.html
@@ -121,6 +121,10 @@
         <!--</div>-->
     <!--</section>-->
     <!--{% include 'partials/event.html' %}-->
+        <section id="event">
+        {% include 'partials/event.html' %}
+    </section>
+
     <section id="wildflower">
         {% include 'partials/wildflower_center.html' %}
     </section>
