RSVP link working

--- a/django-wedding-website/bigday/templates/partials/event.html
+++ b/django-wedding-website/bigday/templates/partials/event.html
@@ -7,10 +7,10 @@
                 <dl class="dl-horizontal lead">
                     <dt>What</dt>
                     <dd>
-                        The main ceremony!
+                        The Wedding!
                     </dd>
                     <dt>When</dt>
-                    <dd>Sunday, Sept. 8 starting at 6:00 pm</dd>
+                    <dd>Sunday, Sept. 8 starting at 6:00 pm. Followed by Cocktail hour in the courtyard then dinner reception until 11pm</dd>
                     <dt>Where</dt>
                     <dd>
                         <address>
