--- a/django-wedding-website/bigday/templates/home.html
+++ b/django-wedding-website/bigday/templates/home.html
@@ -120,14 +120,17 @@
             <!--</div>-->
         <!--</div>-->
     <!--</section>-->
-    <!--{% include 'partials/event.html' %}-->
+{#    <!--{% include 'partials/event.html' %}-->#}
         <section id="event">
         {% include 'partials/event.html' %}
     </section>
-
     <section id="wildflower">
         {% include 'partials/wildflower_center.html' %}
     </section>
+        <section id="registry">
+        {% include 'partials/registry.html' %}
+    </section>
+
 {% comment %}
         {% include 'partials/wedding-party.html' %}
 {% endcomment %}
@@ -141,7 +144,7 @@
         <!--{% include 'partials/story.html' %}-->
     <!--</section>-->
     <!--{% include 'partials/proposal.html' %}-->
-    {% include 'partials/save-the-dates.html' %}
+{#    {% include 'partials/save-the-dates.html' %}#}
     <section id="contact" class="bg-dark">
         <div class="container">
             <div class="row">
