Adding RSVP and attire

--- a/django-wedding-website/bigday/templates/partials/event.html
+++ b/django-wedding-website/bigday/templates/partials/event.html
@@ -17,6 +17,11 @@
                             The <a href="https://goo.gl/maps/fv89YRHEBdN2">LBJ Wildflower Center</a>
                         </address>
                     </dd>
+                    <dt>Attire</dt>
+                    <dd>Business Casual<dd>
+                    <dt>RSVP</dt>
+                    <dd><a href="https://docs.google.com/forms/d/e/1FAIpQLSceuRSKtxlTz_fX4PbDnHvt-XBWPugy42Z8GWeIYfTlZnc5rA/viewform?usp=sf_link">
+                        Follow this link to RSVP</a><dd>
 {#                    <dt>Attire</dt>#}
 {#                    <dd>Casual (Canadiana encouraged)</dd>#}
 {#                    <dt>Transportation</dt>#}
